# thebestmessenger

./: .env  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  plan.md  untitled.pen
backend/: .env.example  DB_load_test.py  Dockerfile  alembic.ini  plan.md  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260324_0001_init.py  20260324_0002_auth.py  20260324_0003_employees.py  20260324_0004_leave_requests.py  20260324_0005_hr_announcements.py  20260326_0006_messenger.py  20260326_0007_unread_badges.py  20260326_0008_employee_hire_date.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/announcements/: router.py
backend/app/api/auth/: bootstrap.py  router.py  security.py
backend/app/api/employees/: router.py
backend/app/api/hr_tasks/: router.py
backend/app/api/leave_requests/: router.py
backend/app/api/messenger/: __init__.py  manager.py  router.py  security.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/domain/announcements/: exceptions.py  repositories.py  use_cases.py
backend/app/domain/auth/: exceptions.py  repositories.py  use_cases.py
backend/app/schemas/: announcements.py  auth.py  common.py  employees.py  hr_tasks.py  leave_requests.py  messenger.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_announcements_service.py  test_auth_service.py  test_employees_service.py  test_hr_tasks_service.py  test_leave_requests_service.py  test_messenger_service.py
docs/: README.MD  openapi.json
(+93 files in other folders)
