[project]
name = "hr-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "asyncpg>=0.30.0",
    "alembic>=1.16.5",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
